--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "stock_trading_alert"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+requests = "^2.28.1"
+python-dotenv = "^0.21.0"
 
 
 [build-system]
