--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "stock_trading_alert"}]
 python = "^3.10"
 requests = "^2.28.1"
 python-dotenv = "^0.21.0"
+pytz = "^2022.2.1"
 
 
 [build-system]
